# synthetic-derm

./: .gitignore  .readthedocs.yaml  README.md  TODOs.md  create_hf_dataset.ipynb  data_exploration.ipynb  dataset.ipynb  ddi_validation.py  dose_response.py  dose_response_test.ipynb  dose_response_test.py  figure_3_example.ipynb  modules.rst  pyproject.toml  requirements.txt  setup.py  skin_classification_with_augmentation.py  test.ipynb
Experiments/: n_per_label.py
fitz_metadata/: fitzpatrick17k_10label_clean_held_out_set.csv  fitzpatrick17k_10label_clean_training.csv
generation/: dataset.py  environment.yml  generate.py  train_dreambooth.py  train_dreambooth_inpaint.py
generation/scripts/: examples.sh
huggingface/: compile_webdataset.py  compile_webdataset_coarse.py  copy_images_to_webdataset.py  copy_images_to_webdataset_coarse.py  crawl_dataset.py  datasets.ipynb  folder_counts.csv  folder_counts2.csv  upload_webdataset_to_huggingface.py
misc/: TODOs.md  dimred.py
paper_experiments/: dimred.py
scripts/: examples.sh
synderm/: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  synderm_cli.py
synderm/classification/: classify.py
synderm/docs/: conf.py  fine_tune.rst  generation.rst  index.rst  requirements.txt
synderm/example_scripts/: generate_synthetic_images.py  sample_datasets.py  shuffle_example.py  train_diffusion_model_inpaint.py  train_diffusion_model_text_to_image.py  training_webdataset.py
synderm/fine_tune/: inpaint_diffusion.py  text_to_image_diffusion.py  util.py
synderm/generation/: __init__.py  dataset.py  util.py  (+3 more)
(+81 files in other folders)
