[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synderm"
version = "0.1.2"
description = "A package for generating synthetic data to augment image classifiers."
authors = [
    { name="Thomas Buckley", email="32546943+2v@users.noreply.github.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.18.0",
    "requests>=2.25.1",
    "torch>=1.7.1",
    "diffusers>=0.7.2",
    "Pillow>=8.0.0",
    "torchvision>=0.8.1",
    "tqdm>=4.50.0",
    "accelerate>=0.12.0",
    "datasets>=3.1.0",
    "huggingface_hub>=0.26.2",
    "lovely_tensors>=0.1.17",
    "pandas>=1.0.0",
    "rich>=13.0.0",
    "transformers>=4.0.0",
    "wandb>=0.19.0"
]

[project.urls]
Homepage = "https://github.com/manrai/synthetic-derm"
Issues = "https://github.com/manrai/synthetic-derm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["synderm*"]